fixing cards on mobile

--- a/assets/stylesheets/mobile/_mobile.scss
+++ b/assets/stylesheets/mobile/_mobile.scss
@@ -1,7 +1,7 @@
 // tablet
 @media only screen and (max-width: 1500px) {
-  body {
-    overflow: auto;
+  html {
+    overflow-x: hidden;
   }
 
   .landingPage {
